Remove dependency to core 4.1.0
Signed-off-by: Gael Macherel <gael.macherel@artelys.com>